# cmake-lua-template

./: CMakeLists.txt  README.md
cmake/: LuaStatic.c.in  LuaStatic.cmake
src/: CMakeLists.txt
